--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalleditar-cntrv-contrc/ver-detalleditar-cntrv-contrc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalleditar-cntrv-contrc/ver-detalleditar-cntrv-contrc.component.html
@@ -22,7 +22,8 @@
                 <p><strong>Tipo de identificación:</strong> {{this.tipoIdentificacion}}</p>
                 <p><strong>Número de identificación:</strong> {{this.numIdentificacion}}</p>
                 <p><strong>Tipo de intervención:</strong> {{this.tipoIntervencion}}</p>
-                <p><strong>Valor del contrato:</strong> {{this.valorContrato | currency: 'COP':'symbol-narrow':'.0-0'}}</p>
+                <p><strong>Valor del contrato:</strong> {{this.valorContrato | currency: 'COP':'symbol-narrow':'.0-0'}}
+                </p>
                 <p><strong>Plazo:</strong> {{this.plazoContrato}}</p>
                 <p><strong>Fecha de inicio de contrato:</strong> {{this.fechaInicioContrato}}</p>
                 <p><strong>Fecha de finalización de contrato:</strong> {{this.fechaFinalizacionContrato}}</p>
@@ -42,7 +43,8 @@
                         Registrar controversias
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <app-form-registrar-controvrs-accord [isEditable]="true" [idControversia]=this.idControversia  (estadoSemaforo)="estadoAcordeon = $event"></app-form-registrar-controvrs-accord>
+                <app-form-registrar-controvrs-accord [isEditable]="true" [idControversia]=this.idControversia
+                    (estadoSemaforo)="estadoAcordeon = $event"></app-form-registrar-controvrs-accord>
             </mat-expansion-panel>
         </mat-accordion>
         <mat-accordion>
@@ -52,8 +54,33 @@
                         Soporte de la solicitud
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <app-form-registrar-controvrs-sop-sol  [isEditable]="true" [idControversia]=this.idControversia  (estadoSemaforo1)="estadoAcordeon1 = $event"></app-form-registrar-controvrs-sop-sol>
+                <app-form-registrar-controvrs-sop-sol [isEditable]="true" [idControversia]=this.idControversia
+                    (estadoSemaforo1)="estadoAcordeon1 = $event"></app-form-registrar-controvrs-sop-sol>
             </mat-expansion-panel>
         </mat-accordion>
+    </div>
+    <div *ngIf="this.numTipoControversia=='1' && this.estadoCodigo=='14'">
+        <mat-card class="shipping-card mainGris">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observaciones
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <div [innerHtml]="this.observacionesTecnico"></div> 
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <div *ngIf="this.numTipoControversia=='1' && this.estadoCodigo=='15'">
+        <mat-card class="shipping-card mainGris">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observaciones
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <div [innerHtml]="this.observacionesFiduciaria"></div> 
+            </mat-card-content>
+        </mat-card>
     </div>
 </div>
