--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-reclamacion-cc/control-y-tabla-reclamacion-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-reclamacion-cc/control-y-tabla-reclamacion-cc.component.html
@@ -41,6 +41,10 @@
                     <div *ngIf="element.estadoActuacionReclamacionCodigo=='3'">Enviado a comité técnico</div>
                     <div *ngIf="element.estadoActuacionReclamacionCodigo=='4'">Devuelta por comité técnico</div>
                     <div *ngIf="element.estadoActuacionReclamacionCodigo=='5'">Aprobada por comité técnico</div>
+                    <div *ngIf="element.estadoActuacionReclamacionCodigo=='6'">Rechazado por comité técnico</div>
+                    <div *ngIf="element.estadoActuacionReclamacionCodigo=='7'">Aprobado en comité fiduciario</div>
+                    <div *ngIf="element.estadoActuacionReclamacionCodigo=='8'">Devuelto por comité fiduciario</div>
+                    <div *ngIf="element.estadoActuacionReclamacionCodigo=='9'">Rechazado por comité fiduciario</div>
                 </td>
             </ng-container>
 
