--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/verdetalle-reclamacion-aseg-cc/verdetalle-reclamacion-aseg-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/verdetalle-reclamacion-aseg-cc/verdetalle-reclamacion-aseg-cc.component.html
@@ -32,4 +32,28 @@
             <p><strong>URL con soporte:</strong> {{this.soporteReclamacion}}</p>
         </mat-card-content>
     </mat-card>
+    <div *ngIf="reclamacion?.observacionesComites[0] != null && reclamacion?.estadoActuacionReclamacionCodigo=='6'">
+        <mat-card class="shipping-card mainGris">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observaciones
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <div [innerHtml]="reclamacion?.observacionesComites[0]"></div> 
+            </mat-card-content>
+        </mat-card>
+    </div>
+    <div *ngIf="reclamacion?.observacionesFiduciaria[0] != null && reclamacion?.estadoActuacionReclamacionCodigo=='9'">
+        <mat-card class="shipping-card mainGris">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observaciones
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <div [innerHtml]="reclamacion?.observacionesFiduciaria[0]"></div> 
+            </mat-card-content>
+        </mat-card>
+    </div>
 </div>
