--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/dialog-env-solicitud-autoriz/dialog-env-solicitud-autoriz.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/dialog-env-solicitud-autoriz/dialog-env-solicitud-autoriz.component.html
@@ -84,7 +84,7 @@
                                 <label  for="urlSoporte"
                                         class="label-left"
                                         [ngClass]="{ 'color-secondaryColor': (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) || (addressForm.get('urlSoporte').invalid && estaEditando)}">
-                                        Url con soporte
+                                        URL con soporte
                                 </label>
                             </div>
                             <div class="col d-flex">
