--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/dialog-observaciones-vfsp/dialog-observaciones-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/dialog-observaciones-vfsp/dialog-observaciones-vfsp.component.html
@@ -3,7 +3,7 @@
 </button>
 <div style="padding: 30px 20px; text-align: center;">
     <h1 class="title-menu--h1 centerTrick">
-        Observaciones item {{ data.jIndex + 1 }}
+        Observaciones ítem {{ data.jIndex + 1 }}
     </h1>
     <p>
         {{ data.registro.get( 'listaChequeoItemNombre' ).value }}
