--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/dialog-rechazar-solicitud-validfsp/dialog-rechazar-solicitud-validfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/dialog-rechazar-solicitud-validfsp/dialog-rechazar-solicitud-validfsp.component.html
@@ -16,7 +16,7 @@
                                     'color-secondaryColor':
                                       (addressForm.get('fechaRadicacionSAC').invalid && addressForm.get('fechaRadicacionSAC').touched) ||
                                       (addressForm.get('fechaRadicacionSAC').invalid && estaEditando)
-                                  }">Fecha de radicación SAC a Técnica</label>
+                                  }">Fecha de radicación SAC a técnica</label>
                             </div>
                             <div class="col d-flex align-items-center">
                                 <mat-form-field class="example-full-width">
@@ -50,7 +50,7 @@
                                     'color-secondaryColor':
                                       (addressForm.get('numeroRadicacionSAC').invalid && addressForm.get('numeroRadicacionSAC').touched) ||
                                       (addressForm.get('numeroRadicacionSAC').invalid && estaEditando)
-                                  }">Número de radicación SAC a Técnica</label>
+                                  }">Número de radicación SAC a técnica</label>
                             </div>
                             <div class="col d-flex align-items-center">
                                 <mat-form-field class="full-width">
@@ -89,7 +89,7 @@
                                     'color-secondaryColor':
                                       (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
                                       (addressForm.get('observaciones').invalid && estaEditando)
-                                  }">Observaciones</label>
+                                  }">Observaciones financiera</label>
                             </div>
                         </div>
                     </div>
