--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/tabla-aprobar-orden-giro/tabla-aprobar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/tabla-aprobar-orden-giro/tabla-aprobar-orden-giro.component.html
@@ -13,12 +13,12 @@
 
     <ng-container matColumnDef="fechaVerificacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de verificación de orden de giro </th>
-      <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaVerificacion | date: 'dd/MM/yyyy' }} </b> </td>
+      <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaAprobacionFinanciera }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="numeroOrden">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de orden de giro </th>
-      <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroOrden }} </td>
+      <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitudOrdenGiro }} </td>
     </ng-container>
 
     <ng-container matColumnDef="modalidad">
@@ -33,7 +33,7 @@
 
     <ng-container matColumnDef="estadoAprobacion">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la aprobación </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoAprobacion }} </td>
+        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadoAprobacionOrdenGiro ? element.estadoNombre2 : element.estadoNombre }} </td>
     </ng-container>
   
     <ng-container matColumnDef="gestion">
@@ -44,20 +44,23 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'aprobarOrdenGiroExpensas', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadoAprobacionOrdenGiro"
+                        [routerLink]="[ 'aprobarOrdenGiroExpensas', element.solicitudPagoId ]">
                         Aprobar orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'editarOrdenGiroExpensas', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro"
+                        [routerLink]="[ 'editarOrdenGiroExpensas', element.solicitudPagoId ]">
                         Ver detalle/Editar
                 </button>
 
                 <button mat-raised-button
-                        color="accent" 
+                        color="accent"
                         class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro && element.registroCompletoAprobar === true"
                         (click)="openDialogEnviarAprobacion()">
                         Enviar para trámite ante fiduciaria
                 </button>
@@ -65,19 +68,22 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'verDetalleExpensas', element.id ]">
+                        *ngIf="element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadoAprobacionOrdenGiro && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro"
+                        [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
                         Ver detalle
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro && element.registroCompletoAprobar === true">
                         Devolver orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadoAprobacionOrdenGiro && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro">
                         Descargar orden de giro
                 </button>
             </ng-container>
@@ -85,20 +91,23 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'aprobarOrdenGiro', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadoAprobacionOrdenGiro"
+                        [routerLink]="[ 'aprobarOrdenGiro', element.solicitudPagoId ]">
                         Aprobar orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'editarOrdenGiro', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro"
+                        [routerLink]="[ 'editarOrdenGiro', element.solicitudPagoId ]">
                         Ver detalle/Editar
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro && element.registroCompletoAprobar === true"
                         (click)="openDialogEnviarAprobacion()">
                         Enviar para trámite ante fiduciaria
                 </button>
@@ -106,19 +115,22 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'verDetalle', element.id ]">
+                        *ngIf="element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadoAprobacionOrdenGiro && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro"
+                        [routerLink]="[ 'verDetalle', element.solicitudPagoId ]">
                         Ver detalle
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro && element.registroCompletoAprobar === true">
                         Devolver orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadoAprobacionOrdenGiro && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoAprobacionOrdenGiro">
                         Descargar orden de giro
                 </button>
             </ng-template>
