--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -36,7 +36,8 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Porcentaje de participación </th>
                   <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
                     <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let aportante of element.aportantes">
-                      {{ aportante.porcentaje }}%
+                      <!-- {{ aportante.porcentaje }}% -->
+                      Pendiente por novedades contractuales
                     </div>
                   </td>
                 </ng-container>
@@ -79,7 +80,7 @@
 
                 <ng-container matColumnDef="saldoValorFacturado">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Saldo fuente de recursos afectado por el valor facturado </th>
-                    <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoValorFacturado | currency: '':'symbol-narrow':'.0-0' }} </td>
+                    <td mat-cell *matCellDef="let element" align="center"> <!-- {{ element.saldoValorFacturado | currency: '':'symbol-narrow':'.0-0' }} --> Pendiente por novedades contractuales </td>
                 </ng-container>
             
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsFuentes"></tr>
@@ -98,7 +99,7 @@
 
         <mat-card class="shipping-card border">
             <mat-card-content align="left">
-                <p><b>Estrategia de pagos:</b> <i>Entidad territorial - Tercero</i></p>
+                <p><b>Estrategia de pagos: </b> <i> {{ getEstrategiaPago( solicitudPago.ordenGiro.ordenGiroDetalle[ 0 ].ordenGiroDetalleEstrategiaPago[ 0 ].estrategiaPagoCodigo ) }} </i> </p>
             </mat-card-content>
         </mat-card>
 
@@ -214,7 +215,10 @@
             </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <app-descuentos-direccion-tecnica [esVerDetalle]="esVerDetalle" [esRegistroNuevo]="esRegistroNuevo"></app-descuentos-direccion-tecnica>
+        <app-descuentos-direccion-tecnica   [esVerDetalle]="esVerDetalle"
+                                            [esRegistroNuevo]="esRegistroNuevo"
+                                            [solicitudPago]="solicitudPago">
+        </app-descuentos-direccion-tecnica>
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
@@ -224,7 +228,10 @@
             </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <app-tercero-causacion [esVerDetalle]="esVerDetalle" [esRegistroNuevo]="esRegistroNuevo"></app-tercero-causacion>
+        <app-tercero-causacion  [esVerDetalle]="esVerDetalle"
+                                [esRegistroNuevo]="esRegistroNuevo"
+                                [solicitudPago]="solicitudPago">
+        </app-tercero-causacion>
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
@@ -235,35 +242,10 @@
         </mat-expansion-panel-header>
 
         <div class="mt-1em text-center">
-            <p>Consecutivo FFIE: <b> 001 </b></p>
+            <b>Consecutivo: {{ solicitudPago.ordenGiro !== undefined ? solicitudPago.ordenGiro.consecutivoOrigen : '' }} </b>
         </div>
 
-        <mat-card class="shipping-card border">
-            <mat-card-content align="left">
-                <h2 class="mt-1em"><b> Aportante 1 </b></h2>
-                <div class="mt-1em">
-                    <p><b>Tipo de aportante: </b> <i>Entidad Territorial</i></p>
-                    <p><b>Nombre del aportante: </b> <i>Alcaldía de Susacón</i></p>
-                    <p><b>Fuente: </b>Contingencias</p>
-                    <p><b>Nombre de la Cuenta: </b> <i>Alcaldía de Susacón</i></p>
-                    <p><b>Número de Cuenta: </b> <i>778969876543257</i></p>
-                    <p><b>Banco: </b> <i>Davivienda</i></p>
-                    <p><b>Tipo de Cuenta: </b> <i>Corriente</i></p>
-                    <p><b>Código SIFI: </b> <i>357314</i></p>
-                </div>
-                <h2 class="mt-1em"><b> Aportante 2 </b></h2>
-                <div class="mt-1em">
-                    <p><b>Tipo de aportante: </b> <i>Tercero</i></p>
-                    <p><b>Nombre del aportante: </b> <i>Fundación Pies Descalzos</i></p>
-                    <p><b>Fuente: </b> <i>Recursos propios</i></p>
-                    <p><b>Nombre de la Cuenta: </b> <i>Fundación Pies Descalzos</i></p>
-                    <p><b>Número de Cuenta: </b> <i>6758-9879-98760</i></p>
-                    <p><b>Banco: </b> <i>Bancolombia</i></p>
-                    <p><b>Tipo de Cuenta: </b> <i>Ahorros</i></p>
-                    <p><b>Código SIFI: </b> <i>358765</i></p>
-                </div>
-            </mat-card-content>
-        </mat-card>
+        <app-form-origen [solicitudPago]="solicitudPago"></app-form-origen>
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
@@ -273,6 +255,9 @@
             </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <app-soporte-orden-giro [esVerDetalle]="esVerDetalle" [esRegistroNuevo]="esRegistroNuevo"></app-soporte-orden-giro>
+        <app-soporte-orden-giro [esVerDetalle]="esVerDetalle"
+                                [esRegistroNuevo]="esRegistroNuevo"
+                                [solicitudPago]="solicitudPago">
+        </app-soporte-orden-giro>
     </mat-expansion-panel>
 </mat-accordion>
