--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tabla-tramitar-orden-giro/tabla-tramitar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tabla-tramitar-orden-giro/tabla-tramitar-orden-giro.component.html
@@ -13,12 +13,12 @@
 
     <ng-container matColumnDef="fechaAprobacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de aprobación de orden de giro </th>
-      <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaAprobacion | date: 'dd/MM/yyyy' }} </b> </td>
+      <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.fechaAprobacionFinanciera }} </b> </td>
     </ng-container>
 
     <ng-container matColumnDef="numeroOrden">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de orden de giro </th>
-      <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroOrden }} </td>
+      <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroSolicitudOrdenGiro }} </td>
     </ng-container>
 
     <ng-container matColumnDef="modalidad">
@@ -33,7 +33,7 @@
 
     <ng-container matColumnDef="estadoTramite">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del trámite </th>
-        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoTramite }} </td>
+        <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadaParaTramiteFiduciaria ? element.estadoNombre2 : element.estadoNombre }} </td>
     </ng-container>
   
     <ng-container matColumnDef="gestion">
@@ -44,33 +44,39 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'tramitarOrdenGiroExpensas', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadaParaTramiteFiduciaria"
+                        [routerLink]="[ 'tramitarOrdenGiroExpensas', element.solicitudPagoId ]">
                         Tramitar orden de giro
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'editarOrdenGiroExpensas', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoTramiteFiduciaria"
+                        [routerLink]="[ 'editarOrdenGiroExpensas', element.solicitudPagoId ]">
                         Ver detalle/Editar
                 </button>
 
+                <!--
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table">
                         Gestionar orden de giro
                 </button>
+                -->
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'verDetalleExpensas', element.id ]">
+                        *ngIf="element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadaParaTramiteFiduciaria && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoTramiteFiduciaria"
+                        [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
                         Ver detalle
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoTramiteFiduciaria && element.registroCompletoTramitar === true">
                         Devolver orden de giro
                 </button>
             </ng-container>
@@ -78,33 +84,48 @@
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'tramitarOrdenGiro', element.id ]">
+                        [routerLink]="[ 'tramitarOrdenGiro', element.solicitudPagoId ]">
                         Tramitar orden de giro
                 </button>
+                
+                <!--
+                <button mat-raised-button
+                        color="accent" 
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enviadaParaTramiteFiduciaria"
+                        [routerLink]="[ 'tramitarOrdenGiro', element.solicitudPagoId ]">
+                        Tramitar orden de giro
+                </button>
+                -->
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'editarOrdenGiro', element.id ]">
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoTramiteFiduciaria"
+                        [routerLink]="[ 'editarOrdenGiro', element.solicitudPagoId ]">
                         Ver detalle/Editar
                 </button>
 
+                <!--
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table">
                         Gestionar orden de giro
                 </button>
+                -->
 
                 <button mat-raised-button
                         color="accent" 
                         class="btn-table"
-                        [routerLink]="[ 'verDetalle', element.id ]">
+                        *ngIf="element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enviadaParaTramiteFiduciaria && element.estadoCodigo !== estadoSolicitudPagoOrdenGiro.enProcesoTramiteFiduciaria"
+                        [routerLink]="[ 'verDetalle', element.solicitudPagoId ]">
                         Ver detalle
                 </button>
 
                 <button mat-raised-button
                         color="accent" 
-                        class="btn-table">
+                        class="btn-table"
+                        *ngIf="element.estadoCodigo === estadoSolicitudPagoOrdenGiro.enProcesoTramiteFiduciaria && element.registroCompletoTramitar === true">
                         Devolver orden de giro
                 </button>
             </ng-template>
