--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -28,8 +28,8 @@
         </mat-expansion-panel-header>
 
         <div class="d-flex justify-content-center mt-1em">
-            <p>Número de DDP: <b> DDP_001 </b></p>
-            <p style="margin-left: 2em;">Valor del DDP: <b>$105.000.000</b></p>
+            <p>Número de DDP: <b> {{ solicitudPago.contratoSon.contratacion.disponibilidadPresupuestal[ 0 ].numeroDdp }} </b></p>
+            <p style="margin-left: 2em;">Valor del DDP: <b> {{ solicitudPago.contratoSon.contratacion.disponibilidadPresupuestal[ 0 ].valorSolicitud | currency:'':'symbol-narrow':'.0-0' }} </b></p>
         </div>
 
         <div class="d-flex justify-content-center table-responsive tabla-gris">
