--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
@@ -140,6 +140,7 @@
                                     <input matInput #valorFacturado currencyMask maxlength="20" required
                                         formControlName="valorFacturado" (keypress)="validateNumberKeypress($event)"
                                         onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                                        (ngModelChange)="checkValorTotal( $event )"
                                         [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                 </mat-form-field>
                                 <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
