--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -92,7 +92,7 @@
 
     <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoEstrategiaPago">
                 Estrategia de pagos
             </mat-panel-title>
         </mat-expansion-panel-header>
@@ -115,10 +115,10 @@
                   </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a la Estrategia de pagos?</b>: Si</p>
-                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a la Estrategia de pagos?</b>: No</p>
-                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                    <p style="margin-left: 2em;"><b> {{ formObservacion.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                    <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación financiera tiene observaciones a la Estrategia de pagos?</b>: Si</p>
+                    <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación financiera tiene observaciones a la Estrategia de pagos?</b>: No</p>
+                    <section [innerHTML]="formObservacion.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"></section>
                 </mat-card-content>
             </mat-card>
         </ng-container>
@@ -175,13 +175,13 @@
                       </span>
                 </div>
                 <div class="text-center mt-1em">
-                    <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formObservacion.get('tieneObservaciones').value === null">
+                    <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formObservacion.dirty === false">
                         <img src="assets/img/icon/guardar.svg">
                     </button>
                 </div>
             </form>
 
-            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
                 <table mat-table [dataSource]="tablaHistorial" matSort>
               
                     <ng-container matColumnDef="fechaRevision">
@@ -191,7 +191,13 @@
               
                     <ng-container matColumnDef="responsable">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
+                        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                            <div [ngSwitch]="element.menuId">
+                                <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                                <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                                <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                            </div>
+                        </td>
                     </ng-container>
               
                     <ng-container matColumnDef="historial">
@@ -208,29 +214,31 @@
         </ng-template>
     </mat-expansion-panel>
 
-    <mat-expansion-panel class="expansion-style sub-expansion">
+    <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="tieneDireccionTecnica === true">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoDireccionTecnica">
                 Descuentos Dirección Técnica
             </mat-panel-title>
         </mat-expansion-panel-header>
 
         <app-descuentos-direccion-tecnica   [esVerDetalle]="esVerDetalle"
                                             [esRegistroNuevo]="esRegistroNuevo"
-                                            [solicitudPago]="solicitudPago">
+                                            [solicitudPago]="solicitudPago"
+                                            (estadoSemaforo)="listaSemaforos.semaforoDireccionTecnica = $event">
         </app-descuentos-direccion-tecnica>
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoTerceroCausacion">
                 Tercero de causación
             </mat-panel-title>
         </mat-expansion-panel-header>
 
         <app-tercero-causacion  [esVerDetalle]="esVerDetalle"
                                 [esRegistroNuevo]="esRegistroNuevo"
-                                [solicitudPago]="solicitudPago">
+                                [solicitudPago]="solicitudPago"
+                                (estadoSemaforo)="listaSemaforos.semaforoTerceroCausacion = $event">
         </app-tercero-causacion>
     </mat-expansion-panel>
 
@@ -250,27 +258,29 @@
 
     <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoObservaciones">
                 Observaciones
             </mat-panel-title>
         </mat-expansion-panel-header>
 
         <app-observaciones  [esVerDetalle]="esVerDetalle"
                             [esRegistroNuevo]="esRegistroNuevo"
-                            [solicitudPago]="solicitudPago">
+                            [solicitudPago]="solicitudPago"
+                            (estadoSemaforo)="listaSemaforos.semaforoObservaciones = $event">
         </app-observaciones>
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : listaSemaforos.semaforoSoporte">
                 Soporte de orden de giro
             </mat-panel-title>
         </mat-expansion-panel-header>
 
         <app-soporte-orden-giro [esVerDetalle]="esVerDetalle"
                                 [esRegistroNuevo]="esRegistroNuevo"
-                                [solicitudPago]="solicitudPago">
+                                [solicitudPago]="solicitudPago"
+                                (estadoSemaforo)="listaSemaforos.semaforoSoporte = $event">
         </app-soporte-orden-giro>
     </mat-expansion-panel>
 </mat-accordion>
