--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/form-verificar-orden-giro/form-verificar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/form-verificar-orden-giro/form-verificar-orden-giro.component.html
@@ -33,7 +33,7 @@
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : semaforoInformacionGeneral">
                     Información general
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -42,13 +42,13 @@
                                         [esRegistroNuevo]="esRegistroNuevo"
                                         [esVerDetalle]="esVerDetalle"
                                         [esExpensas]="esExpensas"
-                                        [verificarOrdenGiroMenuId]="listaMenu.verificarOrdenGiro">
+                                        (estadoSemaforo)="semaforoInformacionGeneral = $event">
             </app-informacion-general>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+                <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : semaforoDetalleGiro">
                     Detalle del giro
                 </mat-panel-title>
             </mat-expansion-panel-header>
@@ -56,7 +56,7 @@
             <app-detalle-giro   [esRegistroNuevo]="esRegistroNuevo"
                                 [esVerDetalle]="esVerDetalle"
                                 [solicitudPago]="solicitudPago"
-                                [verificarOrdenGiroMenuId]="listaMenu.verificarOrdenGiro">
+                                (estadoSemaforo)="semaforoDetalleGiro = $event">
             </app-detalle-giro>
         </mat-expansion-panel>
     </mat-accordion>
