--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -74,7 +74,7 @@
 
     <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : semaforoTerceroGiro">
                 Tercero de giro
             </mat-panel-title>
         </mat-expansion-panel-header>
@@ -113,10 +113,10 @@
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: Si</p>
-                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: No</p>
-                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                    <p style="margin-left: 2em;"><b> {{ formObservacion.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                    <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: Si</p>
+                    <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: No</p>
+                    <section [innerHTML]="formObservacion.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"></section>
                 </mat-card-content>
             </mat-card>
         </ng-container>
@@ -173,7 +173,7 @@
                       </span>
                 </div>
                 <div class="text-center mt-1em">
-                    <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formObservacion.get('tieneObservaciones').value === null">
+                    <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formObservacion.dirty === false">
                         <img src="assets/img/icon/guardar.svg">
                     </button>
                 </div>
@@ -189,7 +189,13 @@
               
                     <ng-container matColumnDef="responsable">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
+                        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                            <div [ngSwitch]="element.menuId">
+                                <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                                <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                                <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                            </div>
+                        </td>
                     </ng-container>
               
                     <ng-container matColumnDef="historial">
