--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/observaciones/observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/observaciones/observaciones.component.html
@@ -18,10 +18,10 @@
               </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: Si</p>
-                <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: No</p>
-                <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                <p style="margin-left: 2em;"><b> {{ formObservacion.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: Si</p>
+                <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === false"><b>¿Desde la coordinación financiera tiene observaciones a esta sección de la orden de giro?</b>: No</p>
+                <section [innerHTML]="formObservacion.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"></section>
             </mat-card-content>
         </mat-card>
     </ng-container>
@@ -84,9 +84,9 @@
             </div>
         </form>
 
-        <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+        <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
             <table mat-table [dataSource]="tablaHistorial" matSort>
-          
+              
                 <ng-container matColumnDef="fechaRevision">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
                   <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
@@ -94,7 +94,13 @@
           
                 <ng-container matColumnDef="responsable">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                    <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
+                    <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                        <div [ngSwitch]="element.menuId">
+                            <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                            <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                            <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                        </div>
+                    </td>
                 </ng-container>
           
                 <ng-container matColumnDef="historial">
