--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -179,7 +179,7 @@
                 </div>
             </form>
 
-            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
                 <table mat-table [dataSource]="tablaHistorial" matSort>
               
                     <ng-container matColumnDef="fechaRevision">
