--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -74,7 +74,7 @@
 
     <mat-expansion-panel class="expansion-style sub-expansion">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : 'completo'">
+            <mat-panel-title class="expansion-style--title" [ngClass]="esVerDetalle === true ? '' : semaforoTerceroGiro">
                 Tercero de giro
             </mat-panel-title>
         </mat-expansion-panel-header>
@@ -106,17 +106,17 @@
         -->
 
         <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-            <mat-card class="shipping-card border" align="left">
+            <mat-card class="shipping-card border" align="left" *ngIf="observacionVerificar !== undefined">
                 <mat-card-header class="header-card">
                     <mat-card-title class="header-card--text card-title-detalle">
                         Verificación de la coordinación financiera
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: Si</p>
-                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: No</p>
-                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                    <p style="margin-left: 2em;"><b> {{ observacionVerificar.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                    <p style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === true"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: Si</p>
+                    <p style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === false"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: No</p>
+                    <section [innerHTML]="observacionVerificar.observacion" style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === true"></section>
                 </mat-card-content>
             </mat-card>
 
@@ -127,25 +127,25 @@
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                    <p style="margin-left: 2em;"><b>¿Desde la dirección financiera tiene observaciones al Tercero de giro?</b>: Si</p>
-                    <p style="margin-left: 2em;"><b>¿Desde la dirección financiera tiene observaciones al Tercero de giro?</b>: No</p>
-                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                    <p style="margin-left: 2em;"><b> {{ formObservacion.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                    <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"><b>¿Desde la dirección financiera tiene observaciones al Tercero de giro?</b>: Si</p>
+                    <p style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === false"><b>¿Desde la dirección financiera tiene observaciones al Tercero de giro?</b>: No</p>
+                    <section [innerHTML]="formObservacion.get( 'observaciones' ).value" style="margin-left: 2em;" *ngIf="formObservacion.get( 'tieneObservaciones' ).value === true"></section>
                 </mat-card-content>
             </mat-card>
         </ng-container>
         <ng-template #noEsVerDetalle>
-            <mat-card class="shipping-card border" align="left">
+            <mat-card class="shipping-card border" align="left" *ngIf="observacionVerificar !== undefined">
                 <mat-card-header class="header-card">
                     <mat-card-title class="header-card--text card-title-detalle">
                         Verificación de la coordinación financiera
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <p style="margin-left: 2em;"><b> 06/03/2021 </b></p>
-                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: Si</p>
-                    <p style="margin-left: 2em;"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: No</p>
-                    <section [innerHTML]="'<p>test</p>'" style="margin-left: 2em;"></section>
+                    <p style="margin-left: 2em;"><b> {{ observacionVerificar.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
+                    <p style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === true"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: Si</p>
+                    <p style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === false"><b>¿Desde la coordinación financiera tiene observaciones al Tercero de giro?</b>: No</p>
+                    <section [innerHTML]="observacionVerificar.observacion" style="margin-left: 2em;" *ngIf="observacionVerificar.tieneObservacion === true"></section>
                 </mat-card-content>
             </mat-card>
 
@@ -207,7 +207,7 @@
                 </div>
             </form>
 
-            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+            <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
                 <table mat-table [dataSource]="tablaHistorial" matSort>
               
                     <ng-container matColumnDef="fechaRevision">
@@ -217,7 +217,13 @@
               
                     <ng-container matColumnDef="responsable">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
-                        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.responsable }} </td>
+                        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+                            <div [ngSwitch]="element.menuId">
+                                <p *ngSwitchCase="listaMenu.verificarOrdenGiro"> Apoyo de la supervisión </p>
+                                <p *ngSwitchCase="listaMenu.aprobarOrdenGiro"> Supervisor </p>
+                                <p *ngSwitchCase="listaMenu.tramitarOrdenGiro"> Fiduciaria </p>
+                            </div>
+                        </td>
                     </ng-container>
               
                     <ng-container matColumnDef="historial">
